# ubulibrary

Makefilelearning/1/: Makefile  main.cpp
Makefilelearning/2/: Makefile
Makefilelearning/3/: Makefile
Makefilelearning/4/: Makefile
Makefilelearning/test/: Makefile
Makefilelearning/test/src/: main.cpp
Makefilelearning/test2/: Makefile
Makefilelearning/test2/src/: add.cpp  main.cpp
Makefilelearning/test3/: Makefile
Makefilelearning/test4/: Makefile
cmakelearning/test5/: CMakeLists.txt
cmakelearning/test5/include/: add.hpp  minus.hpp
cmakelearning/test5/src/: main.cpp
cmakelearning/test6/: CMakeLists.txt
cmakelearning/test7/: CMakeLists.txt
cmakelearning/test9/: CMakeLists.txt
cmakelearning/test9/src/: main.cpp  minus.cpp
